--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,15 @@ after_success:
   - docker push dockerhubdxtat/lrn-multi-nginx
   - docker push dockerhubdxtat/lrn-multi-server
   - docker push dockerhubdxtat/lrn-multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-1"
+  app: "lrn-multi-docker"
+  env: "Lrn-multi-docker-env"
+  bucket_name: "elasticbeanstalk-us-east-1-567504720652"
+  bucket_path: "docker-multi"
+  on:
+    branch: main
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
